--- a/Shared/_LayoutYeniMisafir.cshtml
+++ b/Shared/_LayoutYeniMisafir.cshtml
@@ -118,7 +118,7 @@
             <div class="row">
                
                 <div class="col-lg-4 col-sm-12 col-xs-12" style=" float: none;margin: 0 auto;padding-top: 15px; text-align: center">
-                 <img src="@Href("~/Images/logo2.png")"<br>
+                 <a href="@Href("~/Hesap/Giris")"> <img src="@Href("~/Images/logo2.png")"</a><br>
                 </div>
             </div>
             <div class="row">
